--- a/site/client/package.json
+++ b/site/client/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.4",
+    "@heroicons/vue": "^2.0.13",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.13",
     "vue": "^3.2.41"
   },
   "devDependencies": {
