--- a/site/client/package.json
+++ b/site/client/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.0.13",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.13",
+    "phosphor-icons": "^1.4.2",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.41"
   },
