feat: solutions accordion and contact box Vue components

--- a/site/client/package.json
+++ b/site/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.12",
     "flowbite": "^1.6.4",
     "vue": "^3.2.47"
   },
